--- a/proiect_tp.vcxproj.filters
+++ b/proiect_tp.vcxproj.filters
@@ -34,4 +34,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Text.txt" />
+  </ItemGroup>
 </Project>
